--- a/config/dropbox.yml
+++ b/config/dropbox.yml
@@ -1,6 +1,6 @@
 app_key: "455jdvtqj7dwmaa"
-app_secret: "y8s2mawcu7gti2u"
+app_secret: <%= ENV["APP_SECRET"] %>
 access_token: "lxcslsz6tr9kf6nn"
-access_token_secret: "hpgt34fsdoajd0o"
+access_token_secret: <%= ENV["APP_TOKEN_SECRET"] %>
 user_id: "43314034"
 access_type: "app_folder"
